feat: add admin write APIs refs #154
